--- a/app/src/main/res/layout/footer_button.xml
+++ b/app/src/main/res/layout/footer_button.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    >
 
     <Button
         android:id="@+id/button_addset"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:gravity="center"
+        android:width="150dp"
+        android:background="@drawable/custom_button"
         android:text="Add set" />
 
     <Button
         android:id="@+id/button_cancel"
-        android:layout_width="match_parent"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/custom_button"
         android:gravity="center"
+        android:textColor="@color/myRed"
         android:text="Cancel Workout" />
 
 </LinearLayout>
