--- a/app/src/main/res/layout/layout_dialog_createworkout.xml
+++ b/app/src/main/res/layout/layout_dialog_createworkout.xml
@@ -31,6 +31,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:text="Create"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -45,6 +46,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:text="Cancel"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDialogCreateWorkout"
         app:layout_constraintHorizontal_bias="0.5"
