--- a/app/src/main/res/layout/layout_dialog_startworkout.xml
+++ b/app/src/main/res/layout/layout_dialog_startworkout.xml
@@ -31,6 +31,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:text="Start"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -46,6 +47,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:text="Cancel"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDialogStartWorkout"
         app:layout_constraintHorizontal_bias="0.5"
